--- a/config.yaml
+++ b/config.yaml
@@ -16,9 +16,9 @@ settings:
 
 monitors:
   - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+    name: finphat.com
+    description: 'FinPhat product reviews' # default=empty
+    url: 'https://www.finphat.com/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
