--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 settings:
-  title: 'Status Page'
+  title: 'Icon Solutions Status Page'
   url: 'https://status-page.eidam.dev' # used for Slack messages
   logo: logo-192x192.png # image in ./public/ folder
   daysInHistogram: 90 # number of days you want to display in histogram
@@ -33,7 +33,7 @@ monitors:
     linkable: true # allows the title to be a link, default=true
 
   - id: www-megaequity-com
-    name: Megae Euity
+    name: www.megaequity.com
     url: 'https://megaequity.com/'
     method: GET
     expectStatus: 200
