--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cf-workers-status-page",
+  "name": "status",
   "version": "1.0.0",
   "author": "Adam Janiš <adam.janis@gmail.com>",
   "license": "MIT",
