--- a/config.yaml
+++ b/config.yaml
@@ -22,11 +22,11 @@ monitors:
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: true # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
+    linkable: true # allows the title to be a link, default=true
 
   - id: www-naturelea-com
     name: www.naturelea.com
-    description: 'Built for anything connected to the Internet.'
+    description: 'Naturelea products'
     url: 'https://naturelea.com/'
     method: GET
     expectStatus: 200
@@ -35,5 +35,53 @@ monitors:
   - id: www-megaequity-com
     name: www.megaequity.com
     url: 'https://megaequity.com/'
+    method: GET
+    expectStatus: 200
+
+    - id: www-mega-ploutos-com
+    name: www.megaploutos.com
+    url: 'https://megaploutos.com/'
+    method: GET
+    expectStatus: 200
+
+    - id: www-mega-ploutos-aifm-com
+    name: www.mpaifm.com
+    url: 'https://mpaifm.com/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-grounded-sportswear-com
+    name: www.groundedsportswear.com
+    url: 'http://groundedsportswear.com/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-mastertype-com-cy
+    name: www.mastertype.com.cy
+    url: 'https://mastertype.com.cy/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-thespeechbuddies-com
+    name: www.thespeechbuddies.com
+    url: 'https://thespeechbuddies.com/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-demosgeorgiades-com
+    name: www.demosgeorgiades.com
+    url: 'https://demosgeorgiades.com/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-instofyouth-com
+    name: www.instofyouth.com
+    url: 'https://instofyouth.com/'
+    method: GET
+    expectStatus: 200
+
+  - id: www-leodoes-com
+    name: www.leodoes.com
+    url: 'https://leodoes.com/'
     method: GET
     expectStatus: 200
