--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ settings:
 monitors:
   - id: www.icon-cy # unique identifier
     name: www.icon.cy
-    description: 'ICON SOLUTIONS' # default=empty
+    description: 'ICON SOLUTIONS CY' # default=empty
     url: 'https://www.icon.cy/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
