--- a/config.yaml
+++ b/config.yaml
@@ -116,3 +116,9 @@ monitors:
     url: 'https://thespeechbuddies.com/'
     method: GET
     expectStatus: 200
+
+  - id: www-taverneiotoistorikon-com
+    name: www.taverneiotoistorikon.com
+    url: 'https://taverneiotoistorikon.com/'
+    method: GET
+    expectStatus: 200
