--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,13 +4,13 @@ account_id = ""
 type = "webpack"
 webpack_config = "node_modules/flareact/webpack"
 compatibility_date = "2021-07-23"
+main = "./index.js"
 
 [triggers]
 crons = ["*/30 * * * *"]
 
 [site]
 bucket = "out"
-entry-point = "./"
 
 # uncomment and adjust following if you are not using GitHub Actions
 #[env.production]
