wrangler 1 depricated, updated to wrangler 2

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,21 @@
 name = "status"
-workers_dev = true
+compatibility_date = "2050-09-14"
 account_id = ""
-type = "webpack"
-webpack_config = "node_modules/flareact/webpack"
-compatibility_date = "2021-07-23"
+workers_dev = true
 main = "./index.js"
 
-[triggers]
-crons = ["*/30 * * * *"]
+[build]
+command = "npm run build"
+#account_id = ""
+#type = "webpack"
+#webpack_config = "node_modules/flareact/webpack"
+
+#[triggers]
+#crons = ["* * * * *"]
 
 [site]
 bucket = "out"
+#entry-point = "./"
 
 # uncomment and adjust following if you are not using GitHub Actions
 #[env.production]
